--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,7 @@ on:
 env:
   MIX_ENV: dev
   REQUIRE_VERSION_FILE: true
-  CACHE_PREFIX_DEPS: v1-deps
-  CACHE_PREFIX_BUILD: v1-_build
+  CACHE_PREFIX: v1
 
 jobs:
   publish_to_hex:
@@ -20,34 +19,19 @@ jobs:
       VERSION_ELIXIR: 1.15.0
       VERSION_OTP: 26.0.2
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Write the release version to the version file
         run: |
           echo "Create version file for $GITHUB_REF"
           echo -n "${GITHUB_REF#refs/tags/v}" > version
 
-      - name: Cache - deps/
-        uses: actions/cache@v1
+      - uses: ./.github/actions/setup-and-compile
         with:
-          path: deps/
-          key: ${{ env.CACHE_PREFIX_DEPS }}-env:${{ env.MIX_ENV }}-alpine:${{ env.VERSION_ALPINE }}-elixir:${{ env.VERSION_ELIXIR }}-otp:${{ env.VERSION_OTP }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ env.CACHE_PREFIX_DEPS }}-env:${{ env.MIX_ENV }}-alpine:${{ env.VERSION_ALPINE }}-elixir:${{ env.VERSION_ELIXIR }}-otp:${{ env.VERSION_OTP }}-
-
-      - name: Install Dependencies
-        run: |
-          mix local.rebar --force
-          mix local.hex --force
-          mix deps.get --only "$MIX_ENV"
-
-      - name: Cache - _build/
-        uses: actions/cache@v1
-        with:
-          path: _build/
-          key: ${{ env.CACHE_PREFIX_BUILD }}-env:${{ env.MIX_ENV }}-alpine:${{ env.VERSION_ALPINE }}-elixir:${{ env.VERSION_ELIXIR }}-otp:${{ env.VERSION_OTP }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ env.CACHE_PREFIX_BUILD }}-env:${{ env.MIX_ENV }}-alpine:${{ env.VERSION_ALPINE }}-elixir:${{ env.VERSION_ELIXIR }}-otp:${{ env.VERSION_OTP }}-
-
-      - run: mix compile --warnings-as-errors
+          cache-version: ${{ env.CACHE_PREFIX }}
+          cache-os-version: alpine:${{ env.VERSION_ALPINE }}
+          cache-beam-versions: elixir:${{ env.VERSION_ELIXIR }}-otp:${{ env.VERSION_ELIXIR }}
+          generate-summary: true
 
       - name: Publish to Hex.pm
         run: mix hex.publish --yes
