:green_heart: actions/setup-and-compile: Fix caching

--- a/.github/actions/setup-and-compile/action.yml
+++ b/.github/actions/setup-and-compile/action.yml
@@ -39,6 +39,10 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Install tar for actions/cache
+      shell: sh
+      run: apk add --no-cache tar
+
     - id: cache
       uses: ./.github/actions/compute-cache-key
       with:
